[package]
name        = "later"
version     = "0.1.3"
authors     = ["Thibaut Brandscheid <randaltor@web.de>"]
description = "Later owns the result of a lazy computation which can be accessed via reference."
license     = "BSD 2-Clause"
categories  = ["data-structures", "rust-patterns"]
readme      = "README.md"

[dependencies]
lazycell    = "0.6.0"
arrayvec    = { version = "*", optional = true }
either      = { version = "*", optional = true }
fixedbitset = { version = "*", optional = true }
petgraph    = { version = "*", optional = true }